# autonomous-robots-assignments

hw1/prob1/: prob1.eps  prob1.py
hw1/prob2/: CMakeLists.txt  Dockerfile  docker-compose.yml
hw1/prob2/src/: helloworld.cpp  messages.odvd  prime-checker.cpp  prime-checker.hpp
hw1/prob2/test/: test-prime-checker.cpp
hw1/prob3/: docker-compose.yml  simulation-map.txt
hw1/prob3/control/: CMakeLists.txt  Dockerfile.amd64
hw1/prob3/control/src/: behavior.cpp  behavior.hpp  control.cpp  opendlv-logic-test-kiwi.cpp
hw1/prob3/control/test/: test-behavior.cpp
hw1/prob3/kinematics/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
hw1/prob3/kinematics/src/: differential-steering-model.cpp  differential-steering-model.hpp
hw1/prob3/kinematics/test/: test-differential-steering-model.cpp
hw1/prob34/: docker-compose-demo.yml  docker-compose.yml  plot_result_data.py  prob3_data.txt  simulation-map.txt
hw1/prob34/control/: CMakeLists.txt  Dockerfile.armhf
hw1/prob34/control/src/: behavior.cpp  behavior.hpp  control.cpp
hw1/prob34/control/test/: test-behavior.cpp
hw1/prob34/kinematics/: .gitignore  CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
hw1/prob34/kinematics/src/: differential-steering-model.hpp  kinematics.cpp
hw1/prob34/kinematics/test/: test-differential-steering-model.cpp
hw2/prob1/: docker-compose.yml  prob3.eps  simulation-map.txt
hw2/prob1/control/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
hw2/prob1/control/src/: behavior.cpp  behavior.hpp  control.cpp  kalman.cpp  kalman.hpp
hw2/prob1/control/test/: test-behavior.cpp
hw2/prob1/kinematics/src/: differential-steering-model.cpp
hw2/prob1py/: Pipfile  filter.py  paths_0.5_0.2.eps  paths_0.5_0.20.eps  paths_1.eps  paths_3.0_3.00.eps  velocities_1.eps
hw2/prob2/: conv.m
